# adt-zoomcamp-playground

./: README.md  db.sqlite3  pyproject.toml
01-overview/: README.md
01-overview/01-todo/: db.sqlite3  pyproject.toml
01-overview/01-todo/todoapp/: settings.py  tests.py
01-overview/django-hw/: README.md  db.sqlite3
02-end-to-end/: README.md
02-end-to-end/02-coding-interview/: Dockerfile  README.md  docker-compose.yml  package.json  render.yaml
02-end-to-end/02-coding-interview/backend/: README.md  auth.py  database.db  database.py  main.py  models.py  openapi.yaml  pyproject.toml
02-end-to-end/02-coding-interview/backend/tests/: test_main.py
02-end-to-end/02-coding-interview/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
02-end-to-end/02-coding-interview/frontend/src/: App.css  App.tsx  index.css
02-end-to-end/02-coding-interview/frontend/src/api/: authApi.ts  client.ts  codeExecutionApi.ts  sessionApi.ts
02-end-to-end/02-coding-interview/frontend/src/components/: CodeEditor.tsx
02-end-to-end/02-coding-interview/frontend/src/hooks/: useCollaborativeSession.ts
02-end-to-end/02-coding-interview/frontend/src/pages/: Index.tsx  InterviewSessionPage.tsx  (+1 more)
03-mcp/: README.md
03-mcp/03-homework/: jina_download.py  mcp_server.py  minsearch.py  pyproject.toml  search.py  test.py
03-mcp/mcp-lab/: README.md  pyproject.toml  stdio_client.py  stdio_server.py
todoapp/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
todoapp/migrations/: 0001_initial.py
todoapp/templates/todoapp/: form.html  list.html
(+5 files in other folders)
